--- a/Innovian.Dapr.Workflow.RegistrationAspect.yaml
+++ b/Innovian.Dapr.Workflow.RegistrationAspect.yaml
@@ -47,15 +47,7 @@ stages:
       displayName: 'dotnet test'
       inputs:
         command: 'test'
-        projects: '**/$(ProjectName).AspectTests.csproj'
-
-    - task: DotNetCoreCLI@2
-      displayName: 'dotnet pack'
-      inputs:
-        command: 'pack'
-        packagesToPack: '**/$(ProjectName).csproj'
-        versioningScheme: 'byEnvVar'
-        versionEnvVar: 'BuildNumber'
+        projects: '**/$(ProjectName).Tests.csproj'    
 - stage: Deployment
   dependsOn: Build
   jobs:
@@ -67,6 +59,13 @@ stages:
       demands: Agent.OS -equals Windows_NT
   - job:
     steps:
+    - task: DotNetCoreCLI@2
+      displayName: 'dotnet pack'
+      inputs:
+        command: 'pack'
+        packagesToPack: '**/$(ProjectName).csproj'
+        versioningScheme: 'byEnvVar'
+        versionEnvVar: 'BuildNumber'
     - task: NuGetCommand@2
       displayName: 'Push to NuGet.org'
       inputs:
