Updated package reference

--- a/Innovian.Dapr.Workflow.RegistrationAspect.AspectTests/Innovian.Dapr.Workflow.RegistrationAspect.Tests.csproj
+++ b/Innovian.Dapr.Workflow.RegistrationAspect.AspectTests/Innovian.Dapr.Workflow.RegistrationAspect.Tests.csproj
@@ -32,7 +32,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Innovian.Aspects.Dapr.WorkflowRegistration\Innovian.Dapr.Workflow.RegistrationAspect.csproj" />
+    <ProjectReference Include="..\Innovian.Dapr.Workflow.RegistrationAspect\Innovian.Dapr.Workflow.RegistrationAspect.csproj" />
   </ItemGroup>
 
   <ItemGroup>
